kubernetes/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}
spec:
  type: ClusterIP
  selector:
    app: ${APPLICATION_NAME}
  ports:
  - port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${APPLICATION_NAME} # Name of the ingress, named after the application
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # This is necessary, no idea why
spec:
  tls:
  - hosts:
    - cms.maximemoreillon.com
    - articles.maximemoreillon.com
    secretName: ${APPLICATION_NAME} # Name of the secret, i.e. the certificates
  rules:
  - host: cms.maximemoreillon.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ${APPLICATION_NAME} # Name of the service, named after the app
          servicePort: 80
  - host: articles.maximemoreillon.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ${APPLICATION_NAME} # Name of the service, named after the app
          servicePort: 80
